[package]
name = "vault_hound"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
tar = "0.4.45"
octocrab = "0.49.7"
tokio = { version = "1.51.0", features = ["full"] }
dotenv = "0.15.0"
rusqlite = "0.39.0"
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = { version = "0.23.37", features = ["ring"] }
