[package]
name = "vault_hound_watchman"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
octocrab = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
flate2 = "1.0"
tar = "0.4"
chrono = "0.4"
colored = "2.1"
